@@ -1,5 +1,11 @@
 <h1>News</h1>
 
+<h2>Version 0.8.9</h2>
+<p>Build system and binary dependency update only. xjadeo binaries now feature
+<a href="http://www.ffmpeg.org/">ffmpeg</a> v3.4.5 (latest v3 stable).
+This also marks the start of 64bit windows versions, while OSX/PPC support was dropped.
+</p>
+
 <h2>Version 0.8.8</h2>
 <p>Use PortMidi default device. This allows to configure the MTC MIDI port with pmdefaults
 (<a href="https://github.com/x42/xjadeo/issues/26#issuecomment-394870466">walkthrough example</a>).
