@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.4.
-.TH XJADEO "1" "June 2018" "xjadeo version 0.8.8" "User Commands"
+.TH XJADEO "1" "December 2018" "xjadeo version 0.8.9" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -356,14 +356,14 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.8
+scm\-v0.8.9
 .IP
 compiled with: AVFORMAT=0x393865 AVCODEC=0x394065 AVUTIL:0x372265
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
 .br
-Display(s):    [ openGL Xv SDL X11/imlib2(RGBA32) ]
+Display(s):    [ openGL Xv X11/imlib2(RGBA32) ]
 .SH COPYRIGHT
 Copyright \(co GPL 2006\-2015 Robin Gareus <robin@gareus.org>
 .br
